cmake_minimum_required(VERSION 3.26)
project(c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(c__ jq.cpp
        jq.cpp
        detonate_maximum_bombs.cpp
        losers_circular_game.cpp
        TreeNode.h
        height_binary_tree_after_subtree_removal.cpp
        c-/meta/delete_nodes_return_forest.cpp
        number_digit_one.cpp
        course.cpp
        cycle.cpp
        power_of_heroes.cpp
        is_subStructure.cpp
        last_stone_weight2.cpp
        design_circular_deque.cpp
        integer_to_english.cpp
        version.cpp
        magic_matrix.cpp
        c-/meta/minimum_window_substring.cpp
        k_smallest_lexicographical_order.cpp
        unique_binary_search_trees.cpp
        summary_ranges.cpp
        c-/meta/merge_intervals.cpp
        HtmlParser.cpp
        web_crawler.cpp
        partition_k_equal_sum_subsets.cpp
        max_difference.cpp
        min_subarray.cpp
        interview.cpp
        longest_valid_parentheses.cpp
        minimum_operations_reduce_to_0.cpp
        count_smaller_numbers_after_self.cpp
        counting_bits.cpp
        nvidia.cpp
        basic_calculator.cpp
        beautiful_arrangement.cpp
        Node.h
        c-/meta/copy_list_with_random_pointer.cpp
        next_greater_element.cpp
        next_greater_element_iv.cpp
        count_primes.cpp
        c-/meta/top_k_frequent_elements.cpp
        Trie.cpp
        Trie.h
        super_egg_drop.cpp
        largest_rectangle_histogram.cpp
        sudoku_solver.cpp
        online_stock_span.cpp
        reorder_list.cpp
        basic_calculator_iii.cpp
        spiral_matrix.cpp
        regular_expression_matching.cpp
        c-/meta/candy.cpp
        frog_jump.cpp
        c-/meta/word_break.cpp
        minimum_insertion_steps_make_palindrome.cpp
        n_queens.cpp
        basic_calculator_ii.cpp
        c-/meta/letter_combinations.cpp
        word_ladder.cpp
        max_chunks_make_sorted_ii.cpp
        maximal_rectangle.cpp
        skyline_problem.cpp
        tesla.cpp
        stickers_spell_word.cpp
        c-/meta/valid_number.cpp
        c-/meta/vertical_order_traversal_binary_tree.cpp
        best_meeting_point.cpp
        maximal_score_after_k_operations.cpp
        making_large_island.cpp
        Robot.cpp
        robot_room_cleaner.cpp
        tuple_same_product.cpp
        k_closest_points_origin.cpp
        c-/meta/range_sum_bst.cpp
        c-/meta/intersection_three_sorted_arrays.cpp
        c-/meta/simplify_path.cpp
        c-/meta/subarray_sum_equals_k.cpp
        c-/meta/valid_word_abbreviation.cpp
        palindrome_linked_list.cpp
        c-/meta/maximum_swap.cpp
        find_distance_in_binary_tree.cpp
        custom_sort_string.cpp
        c-/meta/alien_dictionary.cpp
        remove_invalid_parentheses.cpp
        c-/meta/kth_largest_element.cpp
        count_unreachable_pairs_nodes_undirected_graph.cpp
        reducing_dishes.cpp
        partition_labels.cpp
        c-/meta/find_peak_element.cpp
        find_first_last_position.cpp
        smallest_subsequence_distinct_characters.cpp
        find_k_closest_elements.cpp
        punishment_number.cpp
        combination_sum.cpp
        c-/meta/path_sum.cpp
        c-/meta/path_sum_ii.cpp
        c-/meta/longest_path.cpp
        c-/meta/merge_sorted_array.cpp
        c-/meta/LRUCache.cpp
        c-/meta/BSTIterator.cpp
        c-/meta/smallest_subtree_with_all_deepest_nodes.cpp
        c-/meta/course_schedule.cpp
        c-/meta/lowest_common_ancestor_binary_tree_iii.cpp
        c-/meta/minimum_add_parentheses_valid.cpp
        c-/meta/max_consecutive_ones_iii.cpp
        c-/meta/zuma_game.cpp
        c-/meta/delete_string.cpp
        c-/meta/binary_tree_vertical_order_traversal.cpp
        c-/meta/valid_palindrome.cpp
        c-/meta/longest_common_prefix.cpp
        c-/meta/sum_square_numbers.cpp
        c-/meta/valid_palindrome_ii.cpp
        c-/meta/maximum_level_sum_binary_tree.cpp
        c-/meta/2_keys_keyboard.cpp
        h_index_ii.cpp
        c-/meta/merge_two_binary_trees.cpp
        c-/meta/meeting_rooms_ii.cpp
        c-/meta/buildings_with_ocean_view.cpp
        c-/meta/lowest_common_ancestor_deepest_leaves.cpp
        c-/meta/balanced_binary_tree.cpp
        c-/meta/shortest_path_binary_matrix.cpp
        c-/meta/insert_into_sorted_circular_linked_list.cpp
        c-/meta/minimum_remove_make_valid_parentheses.cpp
        c-/meta/find_index_first_occurrence_string.cpp
        c-/meta/best_time_buy_sell_stock.cpp
        c-/meta/max_random_index.cpp
        c-/meta/interval_list_intersections.cpp
        c-/meta/permutations_ii.cpp
        smallest_missing_genetic_value_subtree.cpp
        c-/meta/remove_duplicates_sorted_array.cpp
        c-/meta/merge_three_sort_arrays_without_duplicates.cpp
        c-/meta/valid_parentheses.cpp
        c-/meta/SparseVector.cpp
        c-/meta/clone_graph.cpp
        graph_node.cpp
        graph_node.h
        c-/meta/word_search.cpp
        c-/meta/sum_root_leaf_numbers.cpp
        c-/meta/parse_nested_integer.cpp
        c-/meta/first_bad_version.cpp
        c-/meta/nodes_distance_k_binary_tree.cpp
        c-/meta/next_permutation.cpp
        c-/meta/add_strings.cpp
        c-/meta/find_pivot_index.cpp
        c-/meta/minimum_depth_binary_tree.cpp
        c-/meta/longest_increasing_path_matrix.cpp
        c-/meta/maximum_sum_3_non_overlapping_subarrays.cpp
        c-/meta/MovingAverage.cpp
        c-/meta/kth_smallest_element_sorted_matrix.cpp
        c-/meta/merge_k_sorted_lists.cpp
        c-/meta/first_missing_positive.cpp
        c-/meta/sparse_matrix_multiplication.cpp
        c-/meta/random_pick_with_weight.cpp
        c-/meta/k_closest_points_origin.cpp
        c-/meta/bulls_and_cows.cpp
        c-/meta/word_pattern.cpp
        c-/meta/LFUCache.cpp
        c-/meta/longest_substring_most_two_distinct_characters.cpp
        c-/meta/serialize_deserialize_bst.cpp
        c-/meta/palindromic_substrings.cpp
        c-/meta/powx_n.cpp
        populating_next_right_pointers_ii.cpp
        c-/meta/island_perimeter.cpp
        c-/meta/TimeMap.cpp
        c-/meta/maximum_product_word_lengths.cpp
        c-/meta/continuous_subarray_sum.cpp
        c-/tt/nth_digit.cpp
        c-/tt/WordFilter.cpp
        c-/tt/backspace_string_compare.cpp
        c-/tt/house_robber_ii.cpp
        c-/tt/cutting_ribbons.cpp
        c-/tt/binary_tree_maximum_path_sum.cpp
        c-/tt/spiral_matrix_ii.cpp
        rename.cpp
        c-/tt/spiral_matrix_iii.cpp
        c-/tt/spiral_matrix_iv.cpp
        c-/tt/longest_increasing_subsequence.cpp
        c-/tt/valid_anagram.cpp
        c-/tt/length_longest_valid_substring.cpp
        c-/tt/increasing_triplet_subsequence.cpp
        c-/tt/sort_linked_list_sorted_using_absolute_values.cpp
        c-/tt/encode_string_shortest_length.cpp
        c-/tt/number_good_paths.cpp
        c-/tt/edit_distance.cpp
        c-/tt/search_rotated_sorted_array.cpp
        c-/tt/decode_string.cpp
        c-/tt/min_stack.cpp
        c-/tt/flip_game.cpp
        c-/tt/flip_game_ii.cpp
        c-/tt/shortest_path_grid_obstacles_elimination.cpp
        c-/tt/reverse_nodes_k_group.cpp
        c-/tt/best_time_buy_sell_stock_iii.cpp
        c-/tt/best_time_buy_sell_stock_iv.cpp
        c-/tt/restore_ip_addresses.cpp
        c-/tt/01_matrix.cpp
        c-/tt/round_up.cpp
        c-/tt/find_palindrome_fixed_length.cpp
        c-/tt/trapping_rain_water.cpp
        c-/tt/trapping_rain_water_ii.cpp
        c-/tt/jump_game.cpp
        c-/tt/maximum_profit_job_scheduling.cpp
        c-/tt/compare_version_numbers.cpp
        c-/tt/two_sum_less_than_k.cpp
        c-/tt/sliding_puzzle.cpp
        c-/tt/split_array_largest_sum.cpp
        c-/tt/missing_ranges.cpp
        c-/tt/permutations.cpp
        c-/tt/reorganize_string.cpp
        c-/tt/minimum_deletions_make_character_frequencies_unique.cpp
        c-/tt/remove_k_digits.cpp
        c-/tt/daily_temperatures.cpp
        c-/tt/largest_bst_subtree.cpp
        c-/tt/word_search_ii.cpp
        c-/tt/bus_routes.cpp
        c-/tt/course_schedule_ii.cpp
        c-/tt/maximum_length_semi_decreasing_subarrays.cpp
        c-/tt/pairs_songs_total_durations_divisible.cpp
        c-/tt/rotting_oranges.cpp
        c-/tt/is_graph_bipartite.cpp
        c-/tt/generate_parentheses.cpp
        aa.cpp
        the_kth_factor_n.cpp
        cherry_pickup_ii.cpp
        cherry_pickup.cpp
        watering_plants_ii.cpp
        closest_binary_search_tree_value_ii.cpp
        minimum_rounds_complete_all_tasks.cpp
        perfect_squares.cpp
        substring_concatenation_all_words.cpp
        gray_code.cpp
        minimum_unique_word_abbreviation.cpp
)
  